# partecipate-monitor

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: scan-weekly.yml  test.yml
data/: catalogo.csv  formati_report.json  scanner_report.csv  scanner_report.json
data/history/2026-07-05/: catalogo.csv  data.json  formati_report.json  index.md  scanner_report.json
data/history/2026-07-06/: catalogo.csv  data.json  formati_report.json  scanner_report.json
data/history/2026-07-13/: catalogo.csv  data.json  formati_report.json  scanner_report.json
reports/: data.json  foia_targets.json  index.html
reports/schede/: poste-italiane.html
schemas/: foia_target_schema.json
scripts/: run_all.sh  update_history.sh
src/: build_fatti.py  catalogo.py  fetch_data.py  foia_export.py  formati.py  profiler.py  report.py  scanner.py
tests/: test_foia_schema.py  test_profili.py
