[project]
name = "partecipate-monitor"
version = "0.1.0"
description = "Intelligence sulle societa' partecipate pubbliche italiane — profili multi-fonte (MEF, ANAC, RNA)"
requires-python = ">=3.12"
dependencies = [
    "httpx>=0.28",
    "duckdb>=1.0",
    "pandas>=2.0",
]

[project.scripts]
partecipate-report = "src.report:main"
partecipate-fetch = "src.fetch_data:main"
partecipate-fatti = "src.build_fatti:main"
partecipate-profiler = "src.profiler:main"
