[project]
name = "partecipate-monitor"
version = "0.1.0"
description = "Intelligence sulle societa' partecipate pubbliche italiane — profili multi-fonte (MEF, ANAC, RNA)"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.0",
    "pandas>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
# CLI disponibile via `python -m src.<modulo>`
